use a go-npm fork

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/ershisan99/create-react-component",
   "description": "A simple CLI tool to create react component",
   "dependencies": {
-    "go-npm": "^0.1.9"
+    "@gzuidhof/go-npm": "^0.1.13"
   },
   "scripts": {
     "postinstall": "go-npm install",
